client/src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: rgba(255, 255, 255, 0.87) !important;
  background-color: #242424 !important;
  /* margin: -2rem; */

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  /* font-weight: 500; */
  /* color: #646cff; */
  /* ngl i like this color...*/
  color: #f8f9fa;
  text-decoration: inherit;
}

/* a:hover {
  color: #535bf2;
} */

body {
  margin: 0;
  /* display: flex; */
  /* place-items: center; */
  min-width: 320px;
  min-height: 100vh;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  margin-top: 1rem;
}

button, .genre-dropdown-button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  /* margin: 1em; */
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  color: rgba(255, 255, 255, 0.87);
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover, .genre-item:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.film-card {
  background-color: #161616;
  padding: 5px;
  /* reduce padding */
  border-radius: 3px;
  /* reduce border-radius for a sharper look */
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
  /* reduce shadow */
  width: 100%;
  /* adjust width to make the cards smaller */
}

.film-info {
  /* margin-top: 5px; */
  /* reduce margin */
  font-size: 0.8em;
  text-align: center;
  margin-bottom: -4px;
}

@media (min-width: 768px) {
  .container {
    max-width: 640px;
  }

  .film-card {
    width: 150px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 800px;
  }

  .film-info {
    font-size: 1em;
  }
}

@media (min-width: 1200px) {
  .container {
    max-width: 800px;
  }
}

@media (min-width: 1400px) {
  .container {
    max-width: 800px;
  }
}

.film-not-found img {
  width: 30px;
  margin-left: 5px;
  vertical-align: middle;
}

/* .puffin-birthday-banner img:first-child {
  width: 30px;
  margin-right: 7.5px;
  vertical-align: middle;
}

.puffin-birthday-banner img:last-child {
  width: 30px;
  margin-left: 7.5px;
  vertical-align: middle;
}

.puffin-avatar {
  border-radius: 50%;
  width: 40px;
  margin-left: 7.5px;
  margin-right: 7.5px;
  vertical-align: middle;
} */

.film-details {
  text-align: left;
  padding: 1rem;
}

.film-details h3 {
  font-weight: bold;
  margin-bottom: 1rem;
}

.film-details p {
  margin: 1rem 0;
}

.rank-up {
  color: #08c434;
  font-weight: bold;
}

.rank-up-risers {
  color: #08c434;
  font-weight: bold;
  font-size: 0.7em;
  margin-left: 0.25em;
}

.rank-down {
  color: red;
  font-weight: bold;
}

.rank-down-fallers {
  color: red;
  font-weight: bold;
  font-size: 0.7em;
  margin-left: 0.25em;
}

.rank-section {
  display: flex;
  align-items: center;
}

.big-rank {
  font-size: 1.5em;
  font-weight: bold;
  margin-right: 10px;
}

.community-ratings {
  font-size: 1.25em;
  font-weight: bold;
}

.rank-section img {
  width: 40px;
}

.star-rating {
  color: #08c434;
  font-size: 1.5em;
}

.user-avatar {
  width: 40px;
  border-radius: 50%;
  margin-right: 10px; /* Add space between avatar and username */
  margin-top: 5px;
  margin-bottom: 5px;
}

.user-list-item {
  list-style: none; /* Remove bullet point */
}

ul.ratings-list li:last-child {
  margin-bottom: 2rem;
}

.user-info {
  display: flex;
  align-items: center; /* Vertically align avatar and username */
}

.username {
  vertical-align: middle;
}

.filters {
  margin-bottom: 20px;
}

div.filters button {
  margin: 0.5em;
}

div.filters input {
  font-size: 0.85em;
  margin: 0.2em;
}

.genre-filter {
  margin-top: 15px;
  position: relative;
  display: inline-block;
}

.genre-dropdown {
  position: absolute;
  top: 40px;
  left: 0;
  right: -50px;
  color: rgba(255, 255, 255, 0.87);
  background-color: #1a1a1a;
  border: 1px solid;
  border-radius: 4px;
  max-height: 400px;
  overflow-y: auto;
  z-index: 100;
}

ul.genre-dropdown {
  list-style: none; /* Remove bullet points */
  padding: 0; /* Remove padding */
  margin-top: 13.5px;
  margin-left: 8px;
}

.genre-item {
  padding: 8px 12px;
  cursor: pointer;
  text-align: left;
  transition: background-color 0.3s ease;
}

.genre-item.include {
  content: ' ✔️';
  color: #08c434;
}

.genre-item.exclude {
  content: ' 🚫';
  color: red;
}

.genre-dropdown li {
  list-style: none;
  border: 1px solid;
}

.pagination-section {
  margin-top: 20px;
  text-align: center;
}

.pagination-section button {
  margin: 0 1em 1em 1em;
}

.page-dropdown {
  margin: 0 4px;
  padding: 4px 8px;
  font-size: 1em;
  background-color: #222;
  color: #fff;
  border: 1px solid #555;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  appearance: none; /* Removes default arrow */
}

.page-dropdown:focus {
  border-color: #888;
}

.page-dropdown::after {
  content: '▼'; /* Custom arrow */
  font-size: 12px;
  color: #aaa;
  position: absolute;
  right: 10px;
  pointer-events: none;
}

#whats-new-tabs {
  margin-top: 1em;
}

#whats-new-tabs.container {
  padding-right: 0px;
}

div.tab-pane div.container h3 {
  display: inline-flex;
  align-items: center;
}

div.tab-pane div.container h3 img {
  width: 40px;
  margin-left: 0.2em;
}

.masterlist a {
  font-weight: bold;
}

